--- a/Resources/css/index-page.css
+++ b/Resources/css/index-page.css
@@ -1,13 +1,16 @@
+/* Each div which takes of half of the content div, the outer most div underneath the breadcrumbs */
 .dashboard-wrapper {
     padding-left: 0;
     padding-right: 0;
 }
 
+/* The Title for Topics which appear above the list of topics */
 .dashboard-banner {
     margin: 0;
     text-align: center;
 }
 
+/* The actual list of Topics which hold sections */
 #dashboard-topics {
     float: left;
     list-style: none;
@@ -16,11 +19,8 @@
     margin-top: 1em;
 }
 
-#dashboard-section-outside-box {
-    
-}
-
-#dashboard-sections {
+/* The actual list of Section names which hold dashboards */
+.dashboard-sections {
     list-style: none;
     margin-left: 0;
     width: 100%;
@@ -28,21 +28,27 @@
     display: none;
 }
 
-#dashboard-sections li:not(:first-child) {
-    margin-top: 5px;
+/* Spaces out all of the section names out JUST a little bit*/
+.dashboard-sections li:not(:first-child) {
+    margin-top: 0.25em;
 }
 
-#dashboard-sections-wrapper {
+/* A div that holds the list of section names and dashboards */
+.dashboard-sections-wrapper {
     padding: 25px;
-    background-color: #AFAFAF;
+    background-color: white;
     margin-top: 1em;
     display: none;
+    border-top: 1px solid #979797;
+    border-bottom: 1px solid #979797;
 }
 
+/* A class literally just to add styling to topic buttons via jQuery */
 .right-wall-topic-menu {
     border-right: 1px solid #979797
 }
 
+/* Buttons for topics with topic names */
 li a.topic-buttons.nav-buttons {
     background-color: #DADADA;
     border-top: 1px solid #979797;
@@ -57,13 +63,13 @@ li a.topic-buttons.nav-buttons {
     outline: none;
 }
 
+/* Buttons for Sections with Section names */
 li a.section-buttons.nav-buttons {
-    background-color: #ffffff;
+    background-color: #F3F3F3;
     border-top: 1px solid #979797;
     border-bottom: 1px solid #979797;
     width: 100%;
     color: #565656;
-    /*text-shadow: -1px 0 10px #565656, 0 1px 10px #565656, 1px 0 10px #565656, 0 -1px 10px #565656;*/
     font-size: 18px;
     padding: .2em;
     border-radius: 0;
@@ -71,29 +77,51 @@ li a.section-buttons.nav-buttons {
     outline: none;
 }
 
-li a.nav-buttons:hover {
+/* When you hover over a topic button */
+li a.topic-buttons.nav-buttons:hover {
     background-color: #C5C5C5;
     color: #f1b82d !important;
 }
 
-#dashboard-topics .nav-buttons-wrapper.active a.nav-buttons.btn {
-    color: #f1b82d !important;
-    background-color: #AFAFAF;
+/* When you hover over a section button */
+li a.section-buttons.nav-buttons:hover {
+    background-color: #E6E5E5;
+    color: black !important;
 }
 
-#dashboard-topics .nav-buttons-wrapper, #dashboard-sections .nav-buttons-wrapper {
+/* When a Topic is selected, the colors don't change, otherwise bootstrap tries to replace with its own styling */
+#dashboard-topics .nav-buttons-wrapper.active a.nav-buttons.btn {
+    color: #f1b82d !important;
+    background-color: white;
+}
+
+/* Pushes all topics buttons and section buttons together vertically */
+#dashboard-topics .nav-buttons-wrapper, .dashboard-sections .nav-buttons-wrapper {
     margin: 0;
     margin-top: 0;
 }
 
+/* Pushes buttons together vertically, otherwise bootstrap styling will make it look uneven vertically */
 ul li {
     padding-bottom: 0 !important;
 }
 
-.nav-buttons.btn:focus {
-    color: #f1b82d !important;
+/* Fixes stupid bootstrap styling  */
+.dashboards li:first-child {
+    margin-left: 0;
 }
 
+/* More stupid bootstrap stuff */
+.dashboards li {
+    margin-bottom: 0.5em;
+}
+
+/* Changes text color of dashboard names on modal buttons */
+.dashboards li a {
+    color: black !important;
+}
+
+/* Centers the "no topics" div in the right div */
 #no-topics {
     margin-top: 3em;
     margin-right: 4.5em;
