Changed the styles for mobile

--- a/Resources/css/index-page.css
+++ b/Resources/css/index-page.css
@@ -214,4 +214,7 @@ ul li {
         color: black !important;
         text-shadow: none;
     }
+    .dashboard-sections-wrapper {
+        border-top: none;
+    }
 }
