All mobile and tablet visuals work fine now, will test on my phone to make sure it all works

--- a/Resources/css/index-page.css
+++ b/Resources/css/index-page.css
@@ -176,6 +176,11 @@ ul li {
 
 #content #back-button {
     margin-left: 1em;
+    float: left;
+}
+
+#content #refresh-button {
+    float: right;
 }
 
 /* For Mobile Devices, change a lot of the css to make it look awesome on these devices */
@@ -200,7 +205,7 @@ ul li {
         padding-bottom: 1em;
     }
 
-    #content #back-button {
+    #content #back-button, #content #refresh-button {
         height: 2.25em;
         width: 4em;
         padding: 0.1em;
