--- a/assets/css/index-page.css
+++ b/assets/css/index-page.css
@@ -178,6 +178,7 @@ ul li {
 
 /* The back button on dashboards when they are visible */
 #content #back-button {
+    margin-top: 1em;
     margin-left: 1em;
     float: left;
 }
