--- a/assets/less/_navbar.less
+++ b/assets/less/_navbar.less
@@ -14,3 +14,11 @@
 .navbar-inverse.navbar-clear {
     background: transparent;
 }
+
+.navbar-inverse.navbar-brand{
+    color: @navbar-brand-color;
+}
+
+.navbar-inverse.navbar-form{
+    border-color: @navbar-form-color;
+}
