--- a/assets/less/base.less
+++ b/assets/less/base.less
@@ -4,14 +4,13 @@
 }
 
 .top-buffer{
-    margin-top: 60px;
+    margin-top: 40px;
 }
 
 #logoRow{
     padding-top: 4px;
     padding-bottom: 4px;
-    background: -webkit-linear-gradient(bottom,#f6d075 16%,#f1b82d 75%);
-    //background-color: #8f8884;
+    background: -webkit-linear-gradient(bottom, #f6d075 16%, #f1b82d 75%);
 }
 
 .navbar-inverse .navbar-toggle .icon-bar{
@@ -29,31 +28,27 @@ body{
     margin-bottom: 42px;
 }
 
-.footer{
+footer.footer.container-fluid{
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 40px;
+    height: 42px;
     background-color: #000;
     border-top: 2px solid @mizzou-gold;
     color: @mizzou-gold;
     text-decoration: none;
+    font-weight:lighter;
     a{
-        color: @mizzou-gold;
+        color: #fff;
     }
 }
 
 .alert{
+    position: fixed;
+    top: 110px;
+    left: 0;
+    right: 0;
+    z-index: 9999;
     font-size: 15px;
     font-weight: 600;
-}
-
-.alert-success{
-    background-color: #9CC350;
-    color: #000;
-}
-
-.alert-danger{
-    background-color: #dd4d4d;
-    color: #000;
 }
