--- a/assets/less/base.less
+++ b/assets/less/base.less
@@ -25,19 +25,20 @@ body{
     //background: url('../images/darkdenim3.png
     background-color: #fff;
     color: #000;
-    margin-bottom: 42px;
+    margin-bottom: 50px;
 }
 
 footer.footer.container-fluid{
     position: absolute;
     bottom: 0;
     width: 100%;
-    height: 42px;
+    height: 50px;
     background-color: #000;
     border-top: 2px solid @mizzou-gold;
     color: @mizzou-gold;
     text-decoration: none;
     font-weight:lighter;
+    font-size: smaller;
     a{
         color: #fff;
     }
